Fix overflow on embed for firefox

--- a/client/src/standalone/videos/embed.scss
+++ b/client/src/standalone/videos/embed.scss
@@ -15,6 +15,7 @@ html, body {
 .video-js {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .vjs-poster {
